<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AgeCalculate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/age"
>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Age Calculator"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/dayEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="Day"
        android:inputType="number"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="64dp"/> <!-- Increased margin -->

    <EditText
        android:id="@+id/monthEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="Month"
        android:inputType="number"
        android:layout_below="@id/titleTextView"
        android:layout_toEndOf="@id/dayEditText"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="Year"
        android:inputType="number"
        android:layout_below="@id/titleTextView"
        android:layout_toEndOf="@id/monthEditText"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate Age"
        android:layout_below="@id/yearEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/> <!-- Increased margin -->

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:layout_below="@id/calculateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/> <!-- Increased margin -->
</RelativeLayout>
