<resources>
    <string name="app_name">FitRecipe</string>


    <string-array name="unit_array">
        <item>Meters</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Centimeters</item>
        <item>Millimeters</item>
        <item>Kilometers</item>
        <item>Miles</item>
        <item>Yards</item>
        <item>Megameters</item>
        <item>Nautical Miles</item>
        <item>Light Years</item>
        <!-- Add more units as needed -->
    </string-array>


    <string name="recipeName">Recipe Name</string>
    <string name="ingredients">Ingredients</string>

</resources>

